# speak-see

./: .gitignore  README.md  pyproject.toml  run.ps1  run.sh
docs/: index.html
src/speaksee/: commands.py  config.py  gallery.py  image_sd.py  server.py  session.py  stt_whisper.py  tts.py  ws_protocol.py
src/speaksee/static/: app.css  app.js  audio.js  index.html
tests/: conftest.py  test_commands.py  test_gallery.py  test_smoke_ws.py
